# abb_gamepad_teleoperation

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
.devcontainer/: Dockerfile  devcontainer.json
RAPID/: Module1.mod
abb_examples/: joint_static_goal.cpp  joint_trajectory.cpp  joint_velocity_controller.cpp  pose_controller.cpp  pose_static_goal.cpp
examples/: joint_controller.cpp  joint_velocity_controller.cpp  pose_controller.cpp  pose_static_goal.cpp  pose_trajectory.cpp  pose_velocity_controller.cpp
include/: abb_robots.hpp  colors.hpp  custom_exceptions.hpp  custom_utils.hpp  joystick_interface.hpp  simple_interface.hpp
joystick/: CMakeLists.txt  joystick_sender.cpp
src/: joystick_controller.cpp  keyboard_controller.cpp  main.cpp  my_controller.cpp  my_joint_controller.cpp  my_pose_controller.cpp  raw_controller.cpp  simple_controller.cpp  test_controller.cpp  trajectory_joint.cpp
src/auxiliary_interfaces/: custom_utils.cpp  joystick_interface.cpp  simple_interface.cpp
src/simple_interface/: simple_interface.cpp
